--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@
     min-width: 560px;
     display: flex;
     flex-wrap: wrap;
-    --margin-left: 80px;
-    --margin-top: 50px;
-    ---color: rgba(109, 127, 151, 0.5);
-    --padding: 5px;
-    --border-radius: 10px;
-    --box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
-    --color: #85796b;
-    --transition: all 0.2s ease-in-out;
+    margin-left: 80px;
+    margin-top: 50px;
+    color: rgba(109, 127, 151, 0.5);
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
+    color: #85796b;
+    transition: all 0.2s ease-in-out;
 }
 
 .grid div {
     height: 70px;
     width: 70px;
-    --transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
     border-radius: 50%;
 }
 
