--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px 0 #fff;
     color: #85796b;
-    transition: all 0.2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
 .grid div {
     height: 70px;
     width: 70px;
-    transition: all 0.2s ease-in-out;
+    transition: all .2s ease-in-out;
     border-radius: 50%;
 }
 
